[gd_scene load_steps=7 format=3 uid="uid://do3bur0sw71y8"]

[ext_resource type="Script" path="res://script/player.gd" id="1_84ibk"]
[ext_resource type="Texture2D" uid="uid://b7yynmgra5km3" path="res://graphics/player/player.png" id="1_n6r3m"]
[ext_resource type="Texture2D" uid="uid://cf4ixtjhri52i" path="res://graphics/explosions/gun.png" id="3_pdmfl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pts67"]
radius = 55.0091

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_el3sx"]
particle_flag_disable_z = true
gravity = Vector3(2, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.5

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_7d63t"]
polygon = PackedVector2Array(-16, 56, -28, 54, -34, 46, -34, 41, -36, 40, -41, 30, -46, 27, -49, 18, -53, 14, -57, 1, -56, -20, -51, -29, -48, -37, -43, -41, -28, -47, -15, -53, 0, -55, 10, -55, 19, -57, 26, -56, 30, -51, 33, -45, 40, -39, 47, -29, 56, -24, 61, -21, 67, -14, 70, -10, 72, -10, 77, -12, 82, -11, 87, -9, 90, -5, 95, -5, 101, -3, 105, 0, 116, 2, 113, 8, 120, 4, 124, 12, 124, 23, 119, 30, 113, 30, 114, 35, 104, 34, 101, 31, 96, 39, 89, 41, 88, 48, 57, 49, 53, 38, 39, 38, 33, 41, 20, 44, 12, 50, -7, 55)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_84ibk")

[node name="PlayerImg" type="Sprite2D" parent="."]
position = Vector2(34, 0)
rotation = 1.5708
scale = Vector2(0.928344, 0.928344)
texture = ExtResource("1_n6r3m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pts67")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Markers" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Markers"]
position = Vector2(124, 17)

[node name="Marker2D2" type="Marker2D" parent="Markers"]
position = Vector2(119, 10)

[node name="Marker2D3" type="Marker2D" parent="Markers"]
position = Vector2(119, 29)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(169, 19)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_el3sx")
texture = ExtResource("3_pdmfl")
lifetime = 0.05
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_7d63t")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
